syntax = "proto3";

package logistics;

// Opción para generar el código Go
option go_package = "https://github.com/SistemasDistribuidos-2024-2/grupo-06/app/logistica";

// Importa el tipo Empty de Google Protobuf
import "google/protobuf/empty.proto";

// Mensajes

// Mensaje para representar una orden de suministro
message OrderRequest {
    string order_id = 1;           // ID de la orden
    string faction = 2;            // Facción que realiza la orden (Ostronitas o Grineer)
    string supply_type = 3;        // Tipo de suministro (antitoxinas, municiones, etc.)
    int32 quantity = 4;            // Cantidad de suministros
    double value = 5;              // Valor del suministro
    string destination = 6;        // Destino de la caravana
}

// Mensaje para la respuesta de la orden procesada
message OrderResponse {
    string order_id = 1;           // ID de la orden
    string status = 2;             // Estado de la orden (Procesada, Fallida, etc.)
    string tracking_id = 3;        // Código de seguimiento generado
    double final_value = 4;        // Valor final después de reintentos o descuentos
}

// Mensaje para consultar el estado de un paquete
message TrackingRequest {
    string tracking_id = 1;        // Código de seguimiento
}

// Mensaje para la respuesta del estado de un paquete
message TrackingResponse {
    string tracking_id = 1;        // Código de seguimiento
    string status = 2;             // Estado del paquete (En camino, Entregado, No entregado)
    int32 attempts = 3;            // Número de intentos realizados
    string current_location = 4;   // Ubicación actual del paquete
}

// Mensaje para reportar el resultado de una entrega
message DeliveryReport {
    string tracking_id = 1;        // Código de seguimiento del paquete
    string status = 2;             // Estado de la entrega (Entregado, No entregado)
    double earnings = 3;           // Ganancias o pérdidas para Konzu
    int32 attempts = 4;            // Número de intentos realizados
}

// Servicios

// Servicio para manejar las operaciones de logística
service LogisticsService {
    // Procesar una nueva orden de suministro
    rpc ProcessOrder(OrderRequest) returns (OrderResponse);

    // Consultar el estado de un paquete
    rpc TrackPackage(TrackingRequest) returns (TrackingResponse);

    // Reportar el resultado de una entrega (se usaría entre caravanas y Konzu)
    rpc ReportDelivery(DeliveryReport) returns (google.protobuf.Empty);
}
